build.gradle update

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 project.ext.releaseMode = project.hasProperty('releaseMode')
 
@@ -54,9 +54,9 @@ processResources {
 }
 
 dependencies {
-    implementation 'com.epam.reportportal:client-java:5.0.6'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation 'com.epam.reportportal:commons-model:5.0.0'
+    api 'com.epam.reportportal:client-java:5.0.6'
+    api 'com.google.code.findbugs:jsr305:3.0.2'
+    api 'com.epam.reportportal:commons-model:5.0.0'
 
     implementation 'org.testng:testng:7.1.0'
 
