--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,7 @@ dependencies {
     api 'com.epam.reportportal:client-java:5.0.15'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
-
-    implementation 'org.testng:testng:7.1.0'
+    api 'org.testng:testng:7.1.0'
 
     testImplementation('com.github.reportportal:agent-java-test-utils:ddcf50ee20')
 
