--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.0.9-TESTNG6
+version=5.0.10-TESTNG6-SNAPSHOT
 description=TestNG Agent
 junit5_version=5.6.3
 junit5_launcher_version=1.6.3
