--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,12 @@ processResources {
 }
 
 dependencies {
-    api 'com.epam.reportportal:client-java:5.0.18'
+    api 'com.epam.reportportal:client-java:5.1.0-BETA-1'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
     api 'org.testng:testng:7.1.0'
+
+    implementation 'org.slf4j:slf4j-api:1.7.25'
 
     testImplementation('com.github.reportportal:agent-java-test-utils:ddcf50ee20')
 
@@ -99,7 +101,7 @@ wrapper {
 
 release {
     git {
-        requireBranch = 'master'
+        requireBranch = 'retrofit'
     }
 }
 
