Build scripts update

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 version=5.0.12-SNAPSHOT
-description=TestNG Agent
+description=TestNG integration for ReportPortal
 junit5_version=5.6.3
-junit5_launcher_version=1.6.3
+junit5_runner_version=1.6.3
 mockito_version=3.3.3
+scripts_url=https://raw.githubusercontent.com/reportportal/gradle-scripts
+scripts_branch=develop
