--- a/build.gradle
+++ b/build.gradle
@@ -15,40 +15,16 @@
  */
 apply plugin: 'java-library'
 
-project.ext.releaseMode = project.hasProperty('releaseMode')
-
-def branch = releaseMode ? '5.0.0' : 'develop'
-apply from: "https://raw.githubusercontent.com/reportportal/gradle-scripts/$branch/release-commons.gradle"
+apply from: "${project.scripts_url}/${project.scripts_branch}/build-quality.gradle"
+apply from: "${project.scripts_url}/${project.scripts_branch}/release-commons.gradle"
+apply from: "${project.scripts_url}/${project.scripts_branch}/signing.gradle"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
-    mavenLocal()
     mavenCentral()
     maven { url "https://jitpack.io" }
-}
-
-project.ext.githubUserName = project.hasProperty('githubUserName') ? githubUserName : ""
-project.ext.githubToken = project.hasProperty('githubToken') ? githubToken : ""
-
-publishing {
-    repositories {
-        maven {
-            name = "TestNG GitHub Packages"
-            url = uri("https://maven.pkg.github.com/reportportal/agent-java-testNG")
-            credentials {
-                username = githubUserName
-                password = githubToken
-            }
-        }
-    }
-}
-
-processResources {
-    filesMatching('agent.properties') {
-        expand(project.properties)
-    }
 }
 
 dependencies {
@@ -59,19 +35,18 @@ dependencies {
 
     testImplementation('com.github.reportportal:agent-java-test-utils:ddcf50ee20')
 
-    testImplementation("org.junit.platform:junit-platform-runner:${project.junit5_launcher_version}") {
+    testImplementation("org.junit.platform:junit-platform-runner:${junit5_runner_version}") {
         exclude module: 'junit'
     }
-    testImplementation "org.junit.platform:junit-platform-launcher:${project.junit5_launcher_version}"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${project.junit5_version}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${project.junit5_version}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${project.junit5_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junit5_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
 
     testImplementation "org.aspectj:aspectjweaver:1.9.2"
 
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
-    testImplementation "org.mockito:mockito-core:${project.mockito_version}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${project.mockito_version}"
+    testImplementation "org.mockito:mockito-core:${mockito_version}"
+    testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"
     testImplementation 'ch.qos.logback:logback-classic:1.2.3'
 
     testImplementation 'com.google.inject:guice:4.2.3'
@@ -96,12 +71,8 @@ wrapper {
     gradleVersion = '5.4.1'
 }
 
-release {
-    git {
-        requireBranch = 'master'
+processResources {
+    filesMatching('agent.properties') {
+        expand(project.properties)
     }
 }
-
-def releaseDependencies = [bintrayUpload, publish]
-releaseDependencies.addAll(afterReleaseBuild.getDependsOn())
-afterReleaseBuild.setDependsOn(releaseDependencies)
