--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -62,7 +62,7 @@ jobs:
           echo 'Bundle upload'
           curl -f -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L \
             --request POST '${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/bundle_upload' \
-            --form "file=@${BUNDLE_FILE}" >response.json && echo "Response: $(cat response.json)" || echo "Response: $(cat response.json)"
+            --form "file=@${BUNDLE_FILE}" >response.json
 
           echo "NEXUS_REPOSITORY=`jq -r '.repositoryUris[0]' response.json`" >> $GITHUB_ENV
 
