--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -60,15 +60,9 @@ jobs:
           jar -cvf ${BUNDLE_FILE} "${files[@]}"
 
           echo 'Bundle upload'
-          error=false
           curl -f -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L \
             --request POST '${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/bundle_upload' \
-            --form "file=@${BUNDLE_FILE}" >response.json || error=true
-
-          if [[ "$error" == "true" ]]; then
-            echo "Got error response: $(cat response.json)"
-            exit 1
-          fi
+            --form "file=@${BUNDLE_FILE}" >response.json
 
           echo "NEXUS_REPOSITORY=`jq -r '.repositoryUris[0]' response.json`" >> $GITHUB_ENV
 
