--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -60,11 +60,19 @@ jobs:
           jar -cvf ${BUNDLE_FILE} "${files[@]}"
 
           echo 'Bundle upload'
-          curl -f -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L \
+          curl -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L --header 'Accept: application/json' \
             --request POST '${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/bundle_upload' \
             --form "file=@${BUNDLE_FILE}" >response.json
 
-          echo "NEXUS_REPOSITORY=`jq -r '.repositoryUris[0]' response.json`" >> $GITHUB_ENV
+          repo=`jq -r '.repositoryUris[0]' response.json`
+          if [ -z "$repo" ]; then
+            echo "Unable to upload bundle"
+            echo "`cat response.json`"
+            exit 1
+          fi
+
+          echo "NEXUS_REPOSITORY=${repo}" >> $GITHUB_ENV
+
 
       - name: Get repository variables
         run: |
