--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -64,7 +64,7 @@ jobs:
             --request POST '${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/bundle_upload' \
             --form "file=@${BUNDLE_FILE}" >response.json
 
-          response_type=`jq type response.json`
+          response_type=`jq type response.json || echo ''`
           if [ -z "$response_type" ]; then
             echo 'ERROR: Response is not JSON!'
             cat response.json
