--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -21,8 +21,8 @@ on:
         required: true
 
 env:
-  REPOSITORY_URL: 'https://maven.pkg.github.com/'
-  UPSTREAM_REPOSITORY_URL: 'https://oss.sonatype.org/'
+  REPOSITORY_URL: 'https://maven.pkg.github.com'
+  UPSTREAM_REPOSITORY_URL: 'https://oss.sonatype.org'
   PACKAGE_SUFFIXES: '-javadoc.jar,-javadoc.jar.asc,-sources.jar,-sources.jar.asc,.jar,.jar.asc,.pom,.pom.asc'
   PACKAGE: 'com.epam.reportportal'
 
@@ -40,14 +40,14 @@ jobs:
 
       - name: Get variables
         run: |
-          echo "ARTIFACT=`echo ${{ github.repository }} | cut -d/ -f2-`" >> $GITHUB_ENV
+          echo "ARTIFACT=`echo ${{ github.repository }} | cut -d/ -f2- | awk '{print tolower($0)}'`" >> $GITHUB_ENV
           echo "PACKAGE_PATH=`echo ${{ env.PACKAGE }} | sed 's/\./\//g'`" >> $GITHUB_ENV
 
       - name: Upload package
         run: |
           IFS=',' read -a files <<< '${{ env.PACKAGE_SUFFIXES }}'
           for f in ${files[@]}; do
-            export URL="${{ env.REPOSITORY_URL }}${{ github.repository }}/${PACKAGE_PATH}/${ARTIFACT}/${{ github.event.inputs.version }}/${ARTIFACT}-${{ github.event.inputs.version }}${f}"
+            export URL="${{ env.REPOSITORY_URL }}/${{ github.repository }}/${PACKAGE_PATH}/${ARTIFACT}/${{ github.event.inputs.version }}/${ARTIFACT}-${{ github.event.inputs.version }}${f}"
             echo "Downloading artifact: ${URL}"
             curl -f -u ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} -s -O -L "${URL}"
           done
@@ -60,7 +60,7 @@ jobs:
           jar -cvf ${BUNDLE_FILE} "${files[@]}"
 
           echo 'Bundle upload'
-          curl -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L --header 'Accept: application/json' \
+          curl -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L \
             --request POST '${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/bundle_upload' \
             --form "file=@${BUNDLE_FILE}" >response.json
 
@@ -94,7 +94,7 @@ jobs:
             sleep $SLEEP_TIME
             curl -f -s -u ${{ secrets.SONATYPE_USER }}:${{ secrets.SONATYPE_PASSWORD }} -L \
               --header 'Accept: application/json' \
-              ${{ env.UPSTREAM_REPOSITORY_URL }}service/local/staging/repository/${NEXUS_REPOSITORY_NAME} >result.json
+              ${{ env.UPSTREAM_REPOSITORY_URL }}/service/local/staging/repository/${NEXUS_REPOSITORY_NAME} >result.json
 
             is_closed=`jq -r '.type' result.json`
             is_transitioning=`jq -r '.transitioning' result.json`
