--- a/build.gradle
+++ b/build.gradle
@@ -23,19 +23,20 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url "https://jitpack.io" }
 }
 
 dependencies {
-    api 'com.epam.reportportal:client-java:5.1.0-RC-5'
+    api 'com.epam.reportportal:client-java:5.1.0-RC-6-SNAPSHOT'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
     api 'org.testng:testng:7.1.0'
 
     implementation 'org.slf4j:slf4j-api:1.7.25'
 
-    testImplementation('com.github.reportportal:agent-java-test-utils:ddcf50ee20')
+    testImplementation('com.github.reportportal:agent-java-test-utils:3d4d206')
 
     testImplementation("org.junit.platform:junit-platform-runner:${junit5_runner_version}") {
         exclude module: 'junit'
