--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ junit5_runner_version=1.6.3
 mockito_version=3.3.3
 scripts_url=https://raw.githubusercontent.com/reportportal/gradle-scripts
 scripts_branch=develop
+excludeTests=
