--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,36 +16,39 @@ name: CI Build
 on:
   push:
     branches:
-    - '*'
-    - '!master'
-    - '!v4-hotfix'
-    - '!v5-testng6'
+      - '*'
+      - '!master'
+      - '!v4-hotfix'
+      - '!v5-testng6'
     paths-ignore:
-    - README.md
-    - README_TEMPLATE.md
-    - gradle.properties
-    - CHANGELOG.md
+      - README.md
+      - README_TEMPLATE.md
+      - gradle.properties
+      - CHANGELOG.md
 
   pull_request:
     branches:
-    - master
-    - v4-hotfix
-    - v5-testng6
+      - master
+      - v4-hotfix
+      - v5-testng6
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Codecov upload
+        run: bash <(curl -s https://codecov.io/bash)
