--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     api 'com.epam.reportportal:client-java:5.1.4'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
-    api 'org.testng:testng:7.1.0'
+    api 'org.testng:testng:7.5' // 7.5 - the last version which supports Java 1.8
 
     implementation 'org.slf4j:slf4j-api:1.7.32'
 
