Remove double quotes from string constants

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
 
-    testImplementation "org.aspectj:aspectjweaver:1.9.2"
+    testImplementation 'org.aspectj:aspectjweaver:1.9.2'
 
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
     testImplementation "org.mockito:mockito-core:${mockito_version}"
@@ -71,13 +71,13 @@ dependencies {
 test {
     useJUnitPlatform()
     outputs.upToDateWhen { false }
-    exclude("com/epam/reportportal/testng/integration/feature/**")
+    exclude('com/epam/reportportal/testng/integration/feature/**')
     maxParallelForks(5) // it's forks - separate JVMs, should not interfere each other
     doFirst {
-        def weaver = configurations.testRuntimeClasspath.find { it.name.contains("aspectjweaver") }
+        def weaver = configurations.testRuntimeClasspath.find { it.name.contains('aspectjweaver') }
         jvmArgs += "-javaagent:$weaver"
     }
-    environment "AGENT_NO_ANALYTICS", "1"
+    environment 'AGENT_NO_ANALYTICS', '1'
 }
 
 wrapper {
