--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate versions
-        uses: HardNorth/github-version-generate@v1.1.1
+        uses: HardNorth/github-version-generate@v1.1.2
         with:
           version-source: file
           version-file: ${{ env.VERSION_FILE }}
@@ -71,10 +71,7 @@ jobs:
           ./gradlew release -Prelease.useAutomaticVersion=true -Prelease.releaseVersion=${{ env.RELEASE_VERSION }} \
           -Prelease.newVersion=${{ env.NEXT_VERSION }} -PpublishRepo=${{ env.REPOSITORY_URL }}${{ github.repository }} \
           -PgithubUserName=${{ github.actor }} -PgithubToken=${{ secrets.GITHUB_TOKEN }} \
-          -PgpgPassphrase=${{  secrets.GPG_PASSPHRASE  }} -PgpgPrivateKey="$(cat <<'EOF'
-          ${{ secrets.GPG_PRIVATE_KEY }}
-          EOF
-          )"
+          -PgpgPassphrase=${{  secrets.GPG_PASSPHRASE  }} -PgpgPrivateKey="${{ secrets.GPG_PRIVATE_KEY }}"
 
       - name: Update README.md
         id: readmeUpdate
