--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.1.4-SNAPSHOT
+version=5.1.4
 description=TestNG integration for ReportPortal
 junit5_version=5.6.3
 junit5_runner_version=1.6.3
