--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ project.ext.limits = [
         'class'      : 83
 ]
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenLocal()
@@ -42,7 +42,7 @@ dependencies {
     api 'com.epam.reportportal:client-java:5.1.17'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
-    api 'org.testng:testng:7.5' // 7.5 - the last version which supports Java 1.8
+    api 'org.testng:testng:7.7.0'
 
     implementation 'org.slf4j:slf4j-api:1.7.36'
 
