--- a/build.gradle
+++ b/build.gradle
@@ -39,14 +39,14 @@ repositories {
 }
 
 dependencies {
-    api 'com.epam.reportportal:client-java:5.1.17'
+    api 'com.epam.reportportal:client-java:5.1.21'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
     api 'org.testng:testng:7.7.0'
 
-    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:slf4j-api:2.0.4'
 
-    testImplementation('com.github.reportportal:agent-java-test-utils:236a68c')
+    testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.2'
 
     testImplementation("org.junit.platform:junit-platform-runner:${junit5_runner_version}") {
         exclude module: 'junit'
@@ -54,7 +54,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
 
-    testImplementation 'org.aspectj:aspectjweaver:1.9.2'
+    testImplementation 'org.aspectj:aspectjweaver:1.9.19'
 
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
     testImplementation "org.mockito:mockito-core:${mockito_version}"
