--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.3.1
+version=5.3.2-SNAPSHOT
 description=TestNG integration for ReportPortal
 junit5_version=5.6.3
 junit5_runner_version=1.6.3
