--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,12 @@ repositories {
 }
 
 dependencies {
-    api 'com.epam.reportportal:client-java:5.1.22'
+    api 'com.epam.reportportal:client-java:5.2.1'
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'com.epam.reportportal:commons-model:5.0.0'
-    api 'org.testng:testng:7.7.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'org.testng:testng:7.9.0'
     implementation 'org.slf4j:slf4j-api:2.0.4'
 
     testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.2'
@@ -57,13 +58,12 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
     testImplementation "org.mockito:mockito-core:${mockito_version}"
     testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"
-    testImplementation 'ch.qos.logback:logback-classic:1.4.5'
+    testImplementation 'ch.qos.logback:logback-classic:1.4.12'
 
-    testImplementation 'com.epam.reportportal:logger-java-logback:5.1.5'
+    testImplementation 'com.epam.reportportal:logger-java-logback:5.2.0'
 
     testImplementation 'org.apache.commons:commons-io:1.3.2'
     testImplementation 'com.ibm.icu:icu4j:67.1'
-    testImplementation 'com.google.inject:guice:5.0.1'
 }
 
 test {
