Compile options update

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ project.ext.limits = [
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
