--- a/build.gradle
+++ b/build.gradle
@@ -39,14 +39,14 @@ repositories {
 }
 
 dependencies {
-    api 'com.epam.reportportal:client-java:5.2.6'
-    api 'com.google.code.findbugs:jsr305:3.0.2'
+    api 'com.epam.reportportal:client-java:5.2.13'
 
-    implementation 'org.testng:testng:7.9.0'
+    compileOnly "org.testng:testng:${testng_version}"
     implementation 'org.slf4j:slf4j-api:2.0.4'
 
-    testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.4'
+    testImplementation 'com.epam.reportportal:agent-java-test-utils:0.0.6'
 
+    testImplementation "org.testng:testng:${testng_version}"
     testImplementation("org.junit.platform:junit-platform-runner:${junit5_runner_version}") {
         exclude module: 'junit'
     }
