--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ description=TestNG integration for ReportPortal
 junit5_version=5.6.3
 junit5_runner_version=1.6.3
 mockito_version=3.3.3
+testng_version=7.9.0
 scripts_url=https://raw.githubusercontent.com/reportportal/gradle-scripts
 scripts_branch=master
 excludeTests=
