--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ on:
     branches:
       - '*'
       - '!master'
-      - '!v4-hotfix'
       - '!v5-testng6'
     paths-ignore:
       - README.md
@@ -28,7 +27,7 @@ on:
   pull_request:
     branches:
       - master
-      - v4-hotfix
+      - develop
       - v5-testng6
 
 jobs:
