--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 
     testImplementation 'com.epam.reportportal:logger-java-logback:5.2.2'
 
-    testImplementation 'org.apache.commons:commons-io:1.3.2'
+    testImplementation 'commons-io:commons-io:2.17.0'
     testImplementation 'com.ibm.icu:icu4j:67.1'
     testImplementation ('com.google.inject:guice:5.1.0') {
         exclude module: 'guava'
