Add job timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
           java-version: '11'
 
       - name: Build with Gradle
+        timeout-minutes: 15
         run: ./gradlew build
 
       - name: Codecov upload
